project/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-backend
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-backend
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      volumes:
        - name: image-volume
          persistentVolumeClaim:
            claimName: image-pvc
      containers:
      - name: project-backend
        image: docker.io/ollikortelahti/devops-with-kubernetes:project-v1.2-backend-5
        volumeMounts:
        - name: image-volume
          mountPath: /app/files
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: project-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: project-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
