project/manifests/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: project
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 2
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14.4
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - mountPath: /data
          name: postgres-pv
          subPath: postgres-db
  volumeClaimTemplates:
  - metadata:
      name: postgres-pv
      namespace: project
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
